chore(backend): solve all sonarqube issues